Try insert datasource from sql

--- a/BachHoaXanhStore/BachHoaXanh_Store/BLL_DAO/BLL_DAO.csproj
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BLL_DAO/BLL_DAO.csproj
@@ -92,5 +92,11 @@
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BO\BO.csproj">
+      <Project>{3D3AF6A7-7C51-46C0-96A9-365BB87845C7}</Project>
+      <Name>BO</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
