Add Search Button

--- a/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/BachHoaXanh_Store.csproj
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/BachHoaXanh_Store.csproj
@@ -176,6 +176,12 @@
     <Reference Include="TelerikExport, Version=2021.2.511.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormBanHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormBanHang.Designer.cs">
+      <DependentUpon>FormBanHang.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormChinhSuaSP.cs">
       <SubType>Form</SubType>
     </Compile>
