--- a/BachHoaXanhStore/BachHoaXanh_Store/BO/BO.csproj
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BO/BO.csproj
@@ -39,7 +39,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerBO.cs" />
     <Compile Include="ProductBO.cs" />
+    <Compile Include="ProductTypeBO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
