--- a/BachHoaXanhStore/BachHoaXanh_Store/BO/BO.csproj
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BO/BO.csproj
@@ -40,8 +40,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomerBO.cs" />
+    <Compile Include="OrderCustomerBO.cs" />
+    <Compile Include="OrderStoreBO.cs" />
     <Compile Include="ProductBO.cs" />
     <Compile Include="ProductTypeBO.cs" />
+    <Compile Include="UserBO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
