--- a/BachHoaXanhStore/BachHoaXanh_Store/BLL_DAO/BLL_DAO.csproj
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BLL_DAO/BLL_DAO.csproj
@@ -83,6 +83,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="ReturnProductBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
