--- a/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/App.config
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
@@ -75,7 +75,10 @@
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
   <connectionStrings>
-    <add name="BachHoaXanh_Store.Properties.Settings.BachHoaXanh_StoreConnectionString" connectionString="Data Source=162860-VHBSON;Initial Catalog=BachHoaXanh_Store;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="BachHoaXanh_Store.Properties.Settings.BachHoaXanh_StoreConnectionString"
+      connectionString="Data Source=162860-VHBSON;Initial Catalog=BachHoaXanh_Store;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="BachHoaXanh_StoreConnectionString1" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-HAF1U2R\HUYNHKHANG;integrated security=SSPI;initial catalog=BachHoaXanh_Store" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
