--- a/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/App.config
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/App.config
@@ -76,9 +76,9 @@
   </applicationSettings>
   <connectionStrings>
     <add name="BachHoaXanh_Store.Properties.Settings.BachHoaXanh_StoreConnectionString"
-      connectionString="Data Source=DESKTOP-HAF1U2R\HUYNHKHANG;Initial Catalog=BachHoaXanh_Store;Integrated Security=True"
+      connectionString="Data Source=162860-VHBSON;Initial Catalog=BachHoaXanh_Store;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-	  <add name="BachHoaXanh_StoreConnectionString" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-HAF1U2R\HUYNHKHANG;integrated security=SSPI;initial catalog=BachHoaXanh_Store" />
+	  <add name="BachHoaXanh_StoreConnectionString" connectionString="XpoProvider=MSSqlServer;data source=162860-VHBSON;integrated security=SSPI;initial catalog=BachHoaXanh_Store" />
     <!--<add name="BachHoaXanh_StoreConnectionString" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-HAF1U2R\HUYNHKHANG;integrated security=SSPI;initial catalog=BachHoaXanh_Store" /> -->
   </connectionStrings>
   <startup>
