--- a/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/BachHoaXanh_Store.csproj
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/BachHoaXanh_Store.csproj
@@ -114,6 +114,7 @@
     <Reference Include="System.Management" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -284,6 +285,18 @@
     <Compile Include="FormThemSPKM.Designer.cs">
       <DependentUpon>FormThemSPKM.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormThongKe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormThongKe.Designer.cs">
+      <DependentUpon>FormThongKe.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormThongKeKho.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormThongKeKho.Designer.cs">
+      <DependentUpon>FormThongKeKho.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTimKiem.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -358,6 +371,12 @@
     <Compile Include="ReportForm\rptSTDatHang.Designer.cs">
       <DependentUpon>rptSTDatHang.cs</DependentUpon>
     </Compile>
+    <Compile Include="ReportForm\rptThongKe.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ReportForm\rptThongKe.Designer.cs">
+      <DependentUpon>rptThongKe.cs</DependentUpon>
+    </Compile>
     <Compile Include="test.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -414,6 +433,12 @@
     <EmbeddedResource Include="FormThemSPKM.resx">
       <DependentUpon>FormThemSPKM.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormThongKe.resx">
+      <DependentUpon>FormThongKe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormThongKeKho.resx">
+      <DependentUpon>FormThongKeKho.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormTimKiem.resx">
       <DependentUpon>FormTimKiem.cs</DependentUpon>
     </EmbeddedResource>
@@ -450,6 +475,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ReportForm\rptSTDatHang.resx">
       <DependentUpon>rptSTDatHang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportForm\rptThongKe.resx">
+      <DependentUpon>rptThongKe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="test.resx">
       <DependentUpon>test.cs</DependentUpon>
